# winch

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: BUG-REQUEST.yml
src/: cli.rs  config_parser.rs  configparser.rs  install_script_creation.rs  main.rs
