[package]
name = "winch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
toml = { version = "0.8.8" }
serde = { version = "1.0.193" }
serde_derive = { version = "1.0.193" }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
regex = "1.10.2"
serde_json = "1.0.108"
